--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -1,3 +1,17 @@
-<h1>Bienvenue dans ce blog </h1>
+{% extends 'base.html.twig' %}
+{#<!-- utilisation de cette commande permet d'herité du template de base-->  <!--Poiur geriter de ce template je doit mettere tout dans un bloc 
+le block que on a declarer dans le base.html.twig
+-->#}
+
+{% block body %}  
+
+        <h1>Bienvenue dans ce blog </h1>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos ipsa excepturi consequuntur id reiciendis laborum ipsum facilis odio laboriosam, natus libero assumenda, saepe qui mollitia nihil iusto architecto iste maiores. Non aliquam repudiandae iure eveniet, officia placeat eum suscipit numquam.</p>
-<p>Impedit sunt est aliquam quidem vitae ut! Delectus nemo id, quo deserunt animi perferendis, tempora ipsa error iste, dolore eos ipsam cupiditate praesentium repellendus! Dolor maxime natus, iste tempore eveniet dicta, nobis itaque non aut ipsa, nam blanditiis qui voluptas.</p>
+<p>Impedit sunt est aliquam quidem vitae ut! Delectus nemo id, quo deserunt animi perferendis, tempora ipsa error iste, dolore eos ipsam cupiditate praesentium repellendus! Dolor maxime natus, iste tem
+
+
+
+
+{% endblock %}
+
+{#<!--pour fermer notre block-->#} 
