--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -3,18 +3,38 @@
 {% block title %}Hello BlogController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/cherif/Documents/Master II/HMIN325M - Technologies avancées du web/Symfony/cherif/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/cherif/Documents/Master II/HMIN325M - Technologies avancées du web/Symfony/cherif/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-    </ul>
-</div>
+<section clase="aticles">
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
+            <div class="content">
+                <img src="http://placehold.it/350×150" alt="">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta iste molestiae nobis rem ullam eaque?</p>
+                <p>Earum tempore harum, magni molestias vitae voluptatum, laborum incidunt fugiat iure nesciunt aliquam. Expedita, necessitatibus?</p>
+                <a href="" class="btn btn-primary">lire la suite</a>
+            </div>
+        </article>
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
+            <div class="content">
+                <img src="http://placehold.it/350×150" alt="">
+                <p>Ab magnam cumque suscipit ipsa, dolorem omnis explicabo fugit pariatur fugiat consectetur cum praesentium ea.</p>
+                <p>Consequatur hic aliquid ex quibusdam repudiandae eveniet, consectetur iure, voluptatem eos beatae est nostrum doloribus.</p>
+                <a href="" class="btn btn-primary">lire la suite</a>
+            </div>
+        </article>
+        <article>
+            <h2>Titre de l'article</h2>
+            <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
+            <div class="content">
+                <img src="http://placehold.it/350×150" alt="">
+                <p>Iste aut totam, tempora error provident sed numquam voluptates enim, consequuntur minima voluptatem magni cupiditate.</p>
+                <p>Optio deserunt animi dicta, repellat possimus ipsum porro molestias ullam quae! Iusto iure reiciendis soluta?</p>
+                <a href="" class="btn btn-primary">lire la suite</a>
+            </div>
+        </article>
+    </section>
 {% endblock %}
