--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -10,30 +10,30 @@
             <h2>Titre de l'article</h2>
             <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
             <div class="content">
-                <img src="http://placehold.it/350×150" alt="">
+                <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2015/09/81ba4279-42b5-454b-a1a8-47053fa7ee28/870x489_fotolia_55910119_subscription_monthly_m.jpg" alt="">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta iste molestiae nobis rem ullam eaque?</p>
                 <p>Earum tempore harum, magni molestias vitae voluptatum, laborum incidunt fugiat iure nesciunt aliquam. Expedita, necessitatibus?</p>
-                <a href="" class="btn btn-primary">lire la suite</a>
+                <a href="{{ path('blog_show') }}" class="btn btn-primary">lire la suite</a>
             </div>
         </article>
         <article>
             <h2>Titre de l'article</h2>
             <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
             <div class="content">
-                <img src="http://placehold.it/350×150" alt="">
+                <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2015/09/81ba4279-42b5-454b-a1a8-47053fa7ee28/870x489_fotolia_55910119_subscription_monthly_m.jpg" alt="">
                 <p>Ab magnam cumque suscipit ipsa, dolorem omnis explicabo fugit pariatur fugiat consectetur cum praesentium ea.</p>
                 <p>Consequatur hic aliquid ex quibusdam repudiandae eveniet, consectetur iure, voluptatem eos beatae est nostrum doloribus.</p>
-                <a href="" class="btn btn-primary">lire la suite</a>
+                <a href="{{ path('blog_show') }}" class="btn btn-primary">lire la suite</a>
             </div>
         </article>
         <article>
             <h2>Titre de l'article</h2>
             <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
             <div class="content">
-                <img src="http://placehold.it/350×150" alt="">
+                <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2015/09/81ba4279-42b5-454b-a1a8-47053fa7ee28/870x489_fotolia_55910119_subscription_monthly_m.jpg" alt="">
                 <p>Iste aut totam, tempora error provident sed numquam voluptates enim, consequuntur minima voluptatem magni cupiditate.</p>
                 <p>Optio deserunt animi dicta, repellat possimus ipsum porro molestias ullam quae! Iusto iure reiciendis soluta?</p>
-                <a href="" class="btn btn-primary">lire la suite</a>
+                <a href="{{ path('blog_show') }}" class="btn btn-primary">lire la suite</a>
             </div>
         </article>
     </section>
