--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,6 +1,6 @@
- {% extends "base.html.twig" %}
- {% block body %}
-     <article>
+{% extends 'base.html.twig' %} {# ettendre le template de base #}
+ {% block body %}   {# ettendre le body de base #}
+     <article>   {# je declare un seule article  #}
             <h2>Titre de l'article</h2>
             <div class="metadata">Ecrit le 12/06/2020 à 19:00 dans catégorie Sport</div>
             <div class="content">
