--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     </head>
     <body>
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">SymBlog</a>
+        <a class="navbar-brand" href="{{path('home')}}">SymBlog</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,10 +17,10 @@
         <div class="navbar-collapse collapse show" id="navbarColor01" style="">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog">Articles </a>
+                    <a class="nav-link" href="{{path('blog')}}">Articles </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog/new">Créer un article</a>
+                    <a class="nav-link" href="{{path('blog_createArticle')}}">Créer un article</a>
                 </li>
                
                 <li class="nav-item dropdown">
